--- a/src/app/planet-details/planet-details.component.html
+++ b/src/app/planet-details/planet-details.component.html
@@ -9,18 +9,24 @@
     <div class="card-body">
       <ul>
        <div>
-         <li><b>Name: </b> {{planet['name']}}</li>
+        <li><b>POST ID: </b> {{planet['postId']}}</li>
+        <li><b>ID: </b> {{planet['id']}}</li>
+        <li><b>Name: </b> {{planet['name']}}</li>
+        <li><b>EMAIL: </b> {{planet['email']}}</li>
+        <li><b>BODY: </b> <p> {{planet['body']}}</p></li>
+
+         <!-- <li><b>Name: </b> {{planet['name']}}</li>
         <li><b>Rotation_period: </b> {{planet['rotation_period']}}</li>
         <li><b>Orbital_period: </b> {{planet['orbital_period']}}</li>
         <li><b>Diameter</b> {{planet['diameter']}}</li>
-        <li><b>Climate</b> {{planet['climate']}}</li>
+        <li><b>Climate</b> {{planet['climate']}}</li> -->
       </div>
       <div>
-        <li><b>Gravity</b> {{planet['gravity']}}</li>
+        <!-- <li><b>Gravity</b> {{planet['gravity']}}</li>
         <li><b>Terrain</b> {{planet['terrain']}}</li>
         <li><b>Surface_water</b> <a href="#">{{planet['surface_water']}}</a></li>
         <li><b>Population</b> {{planet['population']}}</li>
-        <li><b>Edited</b> {{planet['edited']}}</li>
+        <li><b>Edited</b> {{planet['edited']}}</li> -->
       </div>
       </ul>
     </div>
