--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -9,18 +9,25 @@
   <div class="card-body">
     <ul>
      <div>
-       <li><b>Name: </b> {{people['name']}}</li>
+      <li><b>AlbumId: </b> {{people['albumId']}}</li>
+      <li><b>ID: </b> {{people['id']}}</li>
+      <li><b>Title: </b> {{people['title']}}</li>
+      <li><b>URL: </b> {{people['url']}}</li>
+      <li><b>ThumbnailUrl: </b> {{people['thumbnailUrl']}}</li>
+
+
+       <!-- <li><b>Name: </b> {{people['name']}}</li>
       <li><b>Height: </b> {{people['height']}}</li>
       <li><b>Mass: </b> {{people['mass']}}</li>
       <li><b>Hair_color</b> {{people['hair_color']}}</li>
-      <li><b>Skin_color</b> {{people['skin_color']}}</li>
+      <li><b>Skin_color</b> {{people['skin_color']}}</li> -->
     </div>
     <div>
-      <li><b>Birth_year</b> {{people['birth_year']}}</li>
+      <!-- <li><b>Birth_year</b> {{people['birth_year']}}</li>
       <li><b>Gender</b> {{people['gender']}}</li>
       <li><b>Homeworld</b> <a href="#">{{people['homeworld']}}</a></li>
       <li><b>Created</b> {{people['created']}}</li>
-      <li><b>Edited</b> {{people['edited']}}</li>
+      <li><b>Edited</b> {{people['edited']}}</li> -->
     </div>
     </ul>
   </div>
