--- a/src/app/planet/planet.component.html
+++ b/src/app/planet/planet.component.html
@@ -10,7 +10,13 @@
     <table class="table table-hover table-bordered"  >
       <thead>
         <tr>
+          <th>POST ID</th>
+          <th>ID</th>
           <th>NAME</th>
+          <th>EMAIL</th>
+          <th>BODY</th>
+
+          <!-- <th>NAME</th>
           <th>ROTATION PERIOD</th>
           <th>ORBITAL PERIOD</th>
           <th>DIAMETER</th>
@@ -23,12 +29,19 @@
           <th>FILMS</th>
           <th>CREATED</th>
           <th>EDITED</th>
-          <th>URL</th>
+          <th>URL</th> -->
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let planet of planetData let n = index" [routerLink]="['/planet', n]">
+          <td>{{planet.postId}}</td>
+          <td>{{planet.id}}</td>
           <td>{{planet.name}}</td>
+          <td>{{planet.email}}</td>
+          <td>{{planet.body}}</td>
+
+
+          <!-- <td>{{planet.name}}</td>
           <td>{{planet.rotation_period}}</td>
           <td>{{planet.orbital_period}}</td>
           <td>{{planet.diameter}}</td>
@@ -41,7 +54,7 @@
           <td>{{planet.films}}</td>
           <td>{{planet.created}}</td>
           <td>{{planet.edited}}</td>
-          <td>{{planet.url}}</td>
+          <td>{{planet.url}}</td> -->
         </tr>
       </tbody>
     </table>
